2003-11-19 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/hierarchyGen/hierarchy.list: added GtkSourceMarker and
	GtkSourceStyleScheme. The latter is actually an interface, but
	everything implementing a glib-style interface must be a GObject.
	
	* sourceview/Makefile: added SourceStyleScheme-HEADER
	
	* sourceview/SourceMarker.chs: new module, requires recently
	comitted changes to c2hs in order to build ok.
	
	* sourceview/sourceview.h: added missing #include for gtksourcemarker
	
	* sourceview/SourceStyleScheme.chs: removed unnecessary code, now
	that GtkSourceStyleScheme has been added into the hierarchy.list
	
	* sourceview/SourceLanguage.chs: added bindings for more functions,
	mostly related to SourceMarker
	
	* sourceview/SourceBuffer.chs: added remaining function bindings,
	again mostly related to SourceMarker

2003-11-18 Axel Simon <A.Simon@kent.ukc.ac.uk>

	* demo/sourceview/Sourceview.hs: Give an error message if the
	language spec file is not found.
	
2003-11-17 Axel Simon <A.Simon@kent.ukc.ac.uk>
	
	* c2hs/gen/GenBind.hs: Do not peek through C typedefs when
	determining the C type equivalent of a Haskell type. This corrects
	a problem with GtkSourceViewMarker which is a typedef of
	GtkTextMark. c2hs generated an interface file which said that all
	GtkTextMarks are now SourceViews in Haskell. This was a bug in
	c2hs.

	* sourceview/SourceLanguagesManager.chs: Completed
	sourceLanguagesManagerGetLangFilesDirs.

	* mk/library.mk: Install one file and one directory at a time. The
	local install-sh script cannot cope with more.
	
	* configure.in: Mange Cygwin paths properly. Not tested. Remove
	unused substitutions.
	
	* tools/hierarchyGen/TypeGen.hs: Make parser accept both "if" and
	"as" statements.

	* sourceview/sourceview.h: Added the gtksourceviewmarker.h to the
	include file list.

	* hierarchyGen/hierarchy.list: Added SourceviewMarker.

2003-11-16 Axel Simon <A.Simon@kent.ukc.ac.uk>
